deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dpl-sampleservicedockerlnx
spec:
    replicas: 2
    selector:
       matchLabels:
          app: sampleservicedockerlnx
    template:
       metadata:
          labels:
             app: sampleservicedockerlnx
       spec:
          containers:
          - name: sampleservicedockerlnx
            image: eugeniyas/sampleservicedockerlnx:v2
            ports:
              - name: web 
                containerPort: 80
            livenessProbe:
              httpGet:
                port: 80
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 80
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
