mssql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mssql
  labels:
    app: mssql
spec:
  type: NodePort
  ports:
   - port: 1433
  selector:
    app: mssql

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-statefulset
spec:
  serviceName: "mssql"
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
        ports:
        - containerPort: 1433
          name: mssqldb
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql/data
          subPath: mssql
  volumeClaimTemplates:
  - metadata:
      name: mssqldb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
