service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srv-sampleservicedockerlnx
spec:
  selector:
    app: sampleservicedockerlnx
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80 
  type: NodePort
